samples/_failures_safe/1761129556_d183cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_678b241d.c: In function ‘main’:
./samples/SAFE/__tmp_678b241d.c:199:9: error: expected declaration or statement at end of input
  199 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_678b241d.c:199:9: error: expected declaration or statement at end of input
